# NovelTL_Dev

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  compose.local.yaml  compose.yaml  conventions.md  docker-compose.yml  issues.md  pyproject.toml  readme.md
.claude/: handoff.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: frontend.yml
alembic/: env.py
backend/: .dockerignore  Dockerfile  openapi.json  openapi.yaml  pyproject.toml
backend/scripts/: export_test_chapter_upload.py  extract_openapi.py  populate_test_data.py
backend/src/: config.py  database.py  exceptions.py  main.py  models.py  redis.py  redis_conn.py  translation_worker.py  worker.py
backend/tests/: conftest.py
docs/: DESIGN.md  README.md  background-jobs.md  conventions.md  database-schema.md  filter-system.md  labeled-text-library.md  project-structure.md  scripts.md  sourcework-model.md  testing.md  workspace-implementation.md
docs/concepts/: monkeypatching.md
e2e/: package.json  playwright.config.ts
frontend/: .oxfmtrc.json  .oxlintrc.json  Dockerfile  orval.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  Test.tsx  main.tsx  routes.ts
src/: config.py  database.py  exceptions.py  main.py  models.py
src/auth/: config.py  constants.py  dependencies.py  models.py  router.py  utils.py
src/autolabels/: constants.py  exceptions.py  (+7 more)
src2/: config.py  database.py  main.py  models.py  test.py
tests/: conftest.py
(+325 files in other folders)
